Add README.md and new configurations of docker-compose.

--- a/docker/mariadb/Dockerfile
+++ b/docker/mariadb/Dockerfile
@@ -1,11 +1,6 @@
-FROM mariadb:latest
+FROM mariadb:10.5
 
-ENV MARIADB_ROOT_PASSWORD=my-secret-pw
-ENV MARIADB_DATABASE=mydatabase
-ENV MARIADB_USER=myuser
-ENV MARIADB_PASSWORD=mypassword
-
-COPY ./init-epindadb.sql /docker-entrypoint-initdb.d/
+COPY ./init-epinga-db.sql /docker-entrypoint-initdb.d/
 
 EXPOSE 3306
 CMD ["mysqld"]
