--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,16 +6,18 @@ services:
     build:
       context: ./mariadb
       dockerfile: Dockerfile
-    container_name: epinga_maridadb
+    container_name: epinga_mariadb
     environment:
       MARIADB_ROOT_PASSWORD: epinga_db_master_password
       MARIADB_DATABASE: epinga_db
       MARIADB_USER: epinga_db_user
-      MARIADB_PASSWORD: epinga_db_password
+      MARIADB_PASSWORD: epinga_db_user_password
     ports:
       - "3306:3306"
     volumes:
       - mariadb_data:/var/lib/mysql
+    expose:
+      - "3306"
 
   redis:
     image: redis:latest
@@ -27,6 +29,8 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    expose:
+      - "3306"
 
 volumes:
   mariadb_data:
